# NESEmulator

./: .gitignore  CMakeLists.txt  NOTES.md  README.md  notes.txt
NESEmulator/: CMakeLists.txt  NESEmulator.cpp  NESEmulator.h  main.cpp
NESEmulator/6502Chip/: CPU.cpp  CPU.h
NESEmulator/DMA/: directMemoryAccess.cpp  directMemoryAccess.h
NESEmulator/databus/: databus.cpp  databus.h  nesDatabus.cpp  nesDatabus.h  ppuDatabus.cpp  ppuDatabus.h
NESEmulator/debuggingTools/: CPUAnalyzer.cpp  CPUAnalyzer.h  NESDebug.cpp  NESDebug.h  PPUDebug.cpp  PPUDebug.h  basicDebugSuite.hpp  debugDatabus.cpp  debugDatabus.h  debugInput.cpp  debugInput.h  debugSuiteInput.h  frameCounter.cpp  frameCounter.h  testOpcodes.cpp  testOpcodes.h
NESEmulator/debuggingTools/debugDisplays/: nametableWatch.cpp  nametableWatch.h  paletteDisplayer.cpp  paletteDisplayer.h  tableDisplayer.cpp  tableDisplayer.h
NESEmulator/globals/: decodeJSON.cpp  decodeJSON.h  helpers.hpp
NESEmulator/graphics/: graphics.cpp  graphics.h  textRenderer.hpp
NESEmulator/input/: cmdInput.cpp  cmdInput.h  controller.cpp  controller.h  input.cpp  input.h  inputPort.cpp  inputPort.h
NESEmulator/instructions/: instructions.cpp  instructions.h
NESEmulator/loadingData/: loadPalette.cpp  loadPalette.h  loadPalette.hpp  parseLogData.cpp  parseLogData.h  parseNESFiles.cpp  parseNESFiles.h
NESEmulator/memory/: cartridgeData.cpp  cartridgeData.h  memory.cpp  memory.h  ram.cpp  ram.h  secondaryOAM.cpp  secondaryOAM.h
NESEmulator/ppu/: ppu.cpp  ppu.h
NESEmulator/testROMS/: nestest.txt  testFileStream.txt
(+9 files in other folders)
